# LDC-GB

./: .gitignore  GB_posterior.py  GB_search.py  README.md  comarison.py  evaluate_matches.py  load_results.py  match_GBs.py  merge_GB_signal_files.py  noise_processing_pipelineStas.ipynb  pyproject.toml  requirements.txt  residual.py  shift_t_initial.py
DataLoader/: __init__.py  data_loader.py
NoiseEstimate/: __init__.py
UNKNOWN.egg-info/: SOURCES.txt
globalGB/: GB_runner.py  GB_search_config.json.example  __init__.py  config.py  grouping.py  search_utils_GB.py
ldc.egg-info/: PKG-INFO  SOURCES.txt
ldc/waveform/fastAK/: fastAK.cpp
ldc/waveform/fastGB/: pyGB.cpp
tests/: conftest.py  test_cli.py  test_config.py  test_merge_GB_signal_files.py  test_posterior_grouping.py  test_search_utils.py
